<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige_claro"
    tools:context=".view.Sucursal5.Sucursal5Fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- Titulo -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sucursal5_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="35dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="The Ancient Mariner"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/sucursal5_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/white"
            />

        <!-- Descripcion -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sucursal5_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="25dp"
            android:paddingBottom="20dp"
            android:text="@string/sucursal2_descripcin"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sucursal5_title"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sucursal_5"
            android:layout_marginTop="160dp"
            app:layout_constraintTop_toBottomOf="@id/sucursal5_title"
            app:layout_constraintStart_toStartOf="parent"
            >
        </ImageView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sucursal5_direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sucursal5_description"
            android:text="@string/sucursal5_direccion"
            android:layout_marginTop="625dp"
            android:background="@color/white"
            android:padding="15dp"
            android:textSize="17sp"
            android:clickable="true"
            >
        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/sucursal5_direccion"
            android:text="@string/sucursal5_horarios"
            android:layout_marginTop="30dp"
            android:textSize="15sp"
            android:paddingBottom="35dp"
            >
        </com.google.android.material.textview.MaterialTextView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>